# AlazForge

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  README.md
.github/workflows/: ci.yml  release.yml
docs/: AlazForge_ClaudeCode_Brief.md
examples/: CMakeLists.txt  SampleIntegrationApp.cpp
src/aero/: AeroSystem.cpp  AeroSystem.h
src/audio/: CollisionEventSystem.cpp  CollisionEventSystem.h
src/ballistics/: BallisticsSystem.cpp  BallisticsSystem.h
src/buoyancy/: BuoyancySystem.cpp  BuoyancySystem.h  WaterVolume.h
src/character/: CharacterController.cpp  CharacterController.h
src/cloth/: ClothSystem.cpp  ClothSystem.h  SoftBodyBlock.cpp  SoftBodyBlock.h
src/context/: AlazForgeContext.cpp  AlazForgeContext.h
src/core/: AlazMath.h  JoltAdapter.h
src/debugdraw/: DebugDrawBridge.cpp  DebugDrawBridge.h
src/destructible/: DestructibleChunkData.cpp  DestructibleChunkData.h  DestructibleStructureSystem.cpp  DestructibleStructureSystem.h  DestructibleTypes.h  VoronoiFracture.cpp  VoronoiFracture.h
src/fire/: FireSpreadSystem.cpp  FireSpreadSystem.h
src/joints/: SpringDamperJoint.cpp  SpringDamperJoint.h
src/lod/: LODSystem.cpp  LODSystem.h
src/magnetism/: MagneticFieldSystem.cpp  MagneticFieldSystem.h
src/material_db/: MaterialDatabase.cpp  MaterialDatabase.h
src/ragdoll/: RagdollDefinition.h  RagdollInstance.cpp  RagdollInstance.h  RagdollSkeleton.cpp  RagdollSkeleton.h
src/rope/: RopeSystem.cpp  RopeSystem.h
src/scene/: MiniJson.cpp  MiniJson.h  QueryHelpers.cpp  QueryHelpers.h  ReplaySystem.cpp  ReplaySystem.h  SceneFile.cpp  SceneFile.h
src/sportsball/: BallPhysicsSystem.cpp  BallPhysicsSystem.h
src/streaming/: ChunkGrid.h  ChunkStreamSystem.cpp  ChunkStreamSystem.h
src/terrain_deform/: TerrainDeformSystem.cpp  TerrainDeformSystem.h
src/vehicle/: TrackBeltSystem.cpp  TrackBeltSystem.h  VehicleSystem.cpp  VehicleSystem.h  WreckPersistence.cpp  WreckPersistence.h
src/weapons/: ExplosionSystem.cpp  ExplosionSystem.h  RecoilImpulse.h  SpreadAccumulator.h  TrajectoryPredictor.cpp  TrajectoryPredictor.h  TurretMount.cpp  TurretMount.h
src/wind/: WindSystem.cpp  WindSystem.h
src/zones/: FrictionZoneSystem.cpp  FrictionZoneSystem.h  TriggerVolumeSystem.cpp  TriggerVolumeSystem.h
tests/: AlazForgeContextTest.cpp  BallPhysicsSystemTest.cpp  BallisticsTest.cpp  BenchmarkMain.cpp  BuoyancySystemTest.cpp  CMakeLists.txt  CharacterControllerTest.cpp  ChunkStreamTest.cpp  ContextIntegrationTest.cpp  DestructibleStructureTest.cpp  ExplosionSystemTest.cpp  FallingCubeTest.cpp  FireSpreadTest.cpp  JoltTestWorld.h  LODSystemTest.cpp  MagneticFieldTest.cpp  QueryHelpersTest.cpp  RagdollTest.cpp  Realism2Test.cpp  Realism3Test.cpp  Realism4Test.cpp  RealismTest.cpp  RecoilImpulseTest.cpp  ReplaySystemTest.cpp  RopeSystemTest.cpp  S1Test.cpp  SceneFileTest.cpp  SoftBodyBlockTest.cpp  SpreadAccumulatorTest.cpp  SpringDamperJointTest.cpp  TerrainCollisionTest.cpp  TerrainDeformTest.cpp  TrackBeltTest.cpp  TriggerVolumeTest.cpp  TurretMountTest.cpp  VehicleTest.cpp  VoronoiFractureTest.cpp  WorldStateTest.cpp  WreckPersistenceTest.cpp
