add_executable(alazforge_test_falling_cube FallingCubeTest.cpp)
target_link_libraries(alazforge_test_falling_cube PRIVATE physics)

add_test(NAME falling_cube COMMAND alazforge_test_falling_cube)

add_executable(alazforge_test_chunk_stream ChunkStreamTest.cpp)
target_link_libraries(alazforge_test_chunk_stream PRIVATE physics)

add_test(NAME chunk_stream COMMAND alazforge_test_chunk_stream)

add_executable(alazforge_test_terrain_deform TerrainDeformTest.cpp)
target_link_libraries(alazforge_test_terrain_deform PRIVATE physics)

add_test(NAME terrain_deform COMMAND alazforge_test_terrain_deform)

add_executable(alazforge_test_ballistics BallisticsTest.cpp)
target_link_libraries(alazforge_test_ballistics PRIVATE physics)

add_test(NAME ballistics COMMAND alazforge_test_ballistics)

add_executable(alazforge_test_vehicle VehicleTest.cpp)
target_link_libraries(alazforge_test_vehicle PRIVATE physics)

add_test(NAME vehicle COMMAND alazforge_test_vehicle)

add_executable(alazforge_test_wreck WreckPersistenceTest.cpp)
target_link_libraries(alazforge_test_wreck PRIVATE physics)

add_test(NAME wreck_persistence COMMAND alazforge_test_wreck)

add_executable(alazforge_test_recoil RecoilImpulseTest.cpp)
target_link_libraries(alazforge_test_recoil PRIVATE weapons)

add_test(NAME recoil_impulse COMMAND alazforge_test_recoil)

add_executable(alazforge_test_spread SpreadAccumulatorTest.cpp)
target_link_libraries(alazforge_test_spread PRIVATE weapons)

add_test(NAME spread_accumulator COMMAND alazforge_test_spread)

add_executable(alazforge_test_turret_mount TurretMountTest.cpp)
target_link_libraries(alazforge_test_turret_mount PRIVATE weapons)

add_test(NAME turret_mount COMMAND alazforge_test_turret_mount)

add_executable(alazforge_test_buoyancy BuoyancySystemTest.cpp)
target_link_libraries(alazforge_test_buoyancy PRIVATE buoyancy)

add_test(NAME buoyancy COMMAND alazforge_test_buoyancy)

add_executable(alazforge_test_destructible DestructibleStructureTest.cpp)
target_link_libraries(alazforge_test_destructible PRIVATE destructible)

add_test(NAME destructible_structure COMMAND alazforge_test_destructible)

add_executable(alazforge_test_ragdoll RagdollTest.cpp)
target_link_libraries(alazforge_test_ragdoll PRIVATE ragdoll)

add_test(NAME ragdoll COMMAND alazforge_test_ragdoll)

add_executable(alazforge_test_context AlazForgeContextTest.cpp)
target_link_libraries(alazforge_test_context PRIVATE context)

add_test(NAME alazforge_context COMMAND alazforge_test_context)

add_executable(alazforge_test_sportsball BallPhysicsSystemTest.cpp)
target_link_libraries(alazforge_test_sportsball PRIVATE sportsball)

add_test(NAME sportsball COMMAND alazforge_test_sportsball)
