add_executable(alazforge_test_falling_cube FallingCubeTest.cpp)
target_link_libraries(alazforge_test_falling_cube PRIVATE physics)

add_test(NAME falling_cube COMMAND alazforge_test_falling_cube)

add_executable(alazforge_test_chunk_stream ChunkStreamTest.cpp)
target_link_libraries(alazforge_test_chunk_stream PRIVATE physics)

add_test(NAME chunk_stream COMMAND alazforge_test_chunk_stream)

add_executable(alazforge_test_terrain_deform TerrainDeformTest.cpp)
target_link_libraries(alazforge_test_terrain_deform PRIVATE physics)

add_test(NAME terrain_deform COMMAND alazforge_test_terrain_deform)

add_executable(alazforge_test_ballistics BallisticsTest.cpp)
target_link_libraries(alazforge_test_ballistics PRIVATE physics)

add_test(NAME ballistics COMMAND alazforge_test_ballistics)

add_executable(alazforge_test_vehicle VehicleTest.cpp)
target_link_libraries(alazforge_test_vehicle PRIVATE physics)

add_test(NAME vehicle COMMAND alazforge_test_vehicle)

add_executable(alazforge_test_wreck WreckPersistenceTest.cpp)
target_link_libraries(alazforge_test_wreck PRIVATE physics)

add_test(NAME wreck_persistence COMMAND alazforge_test_wreck)

add_executable(alazforge_test_recoil RecoilImpulseTest.cpp)
target_link_libraries(alazforge_test_recoil PRIVATE weapons)

add_test(NAME recoil_impulse COMMAND alazforge_test_recoil)

add_executable(alazforge_test_spread SpreadAccumulatorTest.cpp)
target_link_libraries(alazforge_test_spread PRIVATE weapons)

add_test(NAME spread_accumulator COMMAND alazforge_test_spread)

add_executable(alazforge_test_turret_mount TurretMountTest.cpp)
target_link_libraries(alazforge_test_turret_mount PRIVATE weapons)

add_test(NAME turret_mount COMMAND alazforge_test_turret_mount)

add_executable(alazforge_test_buoyancy BuoyancySystemTest.cpp)
target_link_libraries(alazforge_test_buoyancy PRIVATE buoyancy)

add_test(NAME buoyancy COMMAND alazforge_test_buoyancy)

add_executable(alazforge_test_destructible DestructibleStructureTest.cpp)
target_link_libraries(alazforge_test_destructible PRIVATE destructible)

add_test(NAME destructible_structure COMMAND alazforge_test_destructible)

add_executable(alazforge_test_ragdoll RagdollTest.cpp)
target_link_libraries(alazforge_test_ragdoll PRIVATE ragdoll)

add_test(NAME ragdoll COMMAND alazforge_test_ragdoll)

add_executable(alazforge_test_context AlazForgeContextTest.cpp)
target_link_libraries(alazforge_test_context PRIVATE context)

add_test(NAME alazforge_context COMMAND alazforge_test_context)

add_executable(alazforge_test_context_integration ContextIntegrationTest.cpp)
target_link_libraries(alazforge_test_context_integration PRIVATE context)

add_test(NAME context_integration COMMAND alazforge_test_context_integration)

add_executable(alazforge_test_sportsball BallPhysicsSystemTest.cpp)
target_link_libraries(alazforge_test_sportsball PRIVATE sportsball)

add_test(NAME sportsball COMMAND alazforge_test_sportsball)

add_executable(alazforge_test_character CharacterControllerTest.cpp)
target_link_libraries(alazforge_test_character PRIVATE character)

add_test(NAME character_controller COMMAND alazforge_test_character)

add_executable(alazforge_test_explosion ExplosionSystemTest.cpp)
target_link_libraries(alazforge_test_explosion PRIVATE weapons)

add_test(NAME explosion COMMAND alazforge_test_explosion)

add_executable(alazforge_test_rope RopeSystemTest.cpp)
target_link_libraries(alazforge_test_rope PRIVATE rope buoyancy)

add_test(NAME rope COMMAND alazforge_test_rope)

add_executable(alazforge_test_realism RealismTest.cpp)
target_link_libraries(alazforge_test_realism PRIVATE weapons)

add_test(NAME realism COMMAND alazforge_test_realism)

add_executable(alazforge_test_realism2 Realism2Test.cpp)
target_link_libraries(alazforge_test_realism2 PRIVATE buoyancy zones cloth)

add_test(NAME realism2 COMMAND alazforge_test_realism2)

add_executable(alazforge_test_realism3 Realism3Test.cpp)
target_link_libraries(alazforge_test_realism3 PRIVATE character weapons destructible aero)

add_test(NAME realism3 COMMAND alazforge_test_realism3)

add_executable(alazforge_test_s1 S1Test.cpp)
target_link_libraries(alazforge_test_s1 PRIVATE audio physics)

add_test(NAME s1_collision_damage COMMAND alazforge_test_s1)

add_executable(alazforge_test_lod LODSystemTest.cpp)
target_link_libraries(alazforge_test_lod PRIVATE lod)

add_test(NAME lod_system COMMAND alazforge_test_lod)

add_executable(alazforge_test_realism4 Realism4Test.cpp)
target_link_libraries(alazforge_test_realism4 PRIVATE physics buoyancy rope)

add_test(NAME realism4 COMMAND alazforge_test_realism4)

add_executable(alazforge_test_world_state WorldStateTest.cpp)
target_link_libraries(alazforge_test_world_state PRIVATE context)

add_test(NAME world_state COMMAND alazforge_test_world_state)

add_executable(alazforge_test_terrain_collision TerrainCollisionTest.cpp)
target_link_libraries(alazforge_test_terrain_collision PRIVATE physics debugdraw)

add_test(NAME terrain_collision COMMAND alazforge_test_terrain_collision)

# Bilgilendirici benchmark -- ctest'e kayitli degil, CI ayri adimda kosar
add_executable(alazforge_bench BenchmarkMain.cpp)
target_link_libraries(alazforge_bench PRIVATE context)
